# egcd

./: .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-publish-sign-release.yml  lint-test-cover-docs.yml  lint-test-cover.yml
docs/: conf.py  toc.rst
docs/_source/: egcd.rst
egcd/: __init__.py  egcd.py
src/egcd/: __init__.py  egcd.py
