[project]
name = "egcd"
version = "0.6.0"
description = """\
    Easy-to-import library with a basic, efficient, pure-Python \
    implementation of the extended Euclidean algorithm.\
    """
license = {text = "MIT"}
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/lapets/egcd"
Documentation = "https://egcd.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=5.0",
    "sphinx-rtd-theme~=1.0.0"
]
test = [
    "pytest~=7.2",
    "pytest-cov~=4.0"
]
lint = [
    "pylint~=2.17.0"
]
coveralls = [
    "coveralls~=3.3.1"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=67.6"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=egcd --cov-report term-missing"
