[project]
name = "egcd"
version = "3.0.0"
description = """\
    Pure-Python extended Euclidean algorithm implementation \
    that accepts any number of integer arguments.\
    """
license = "MIT"
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/lapets/egcd"
Documentation = "https://egcd.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=7.4",
    "sphinx-rtd-theme~=3.0"
                                   
]
test = [
    "pytest~=8.4",
    "pytest-cov~=7.0"
]
lint = [
    "pylint~=3.3"
]
coveralls = [
    "coveralls~=4.0"
]
publish = [
    "build~=1.3",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=77.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=egcd --cov-report term-missing"
